--- a/sources/catalog/depCardingCatalog/economy-resources/view.html
+++ b/sources/catalog/depCardingCatalog/economy-resources/view.html
@@ -18,6 +18,11 @@
 		<el-table-column prop="system_name" label="系统名称" width="30%"></el-table-column>
 		<el-table-column prop="system_desc" label="系统描述"	width="30%"></el-table-column>
 		<el-table-column prop="dept_name" label="来源部门" width="30%"></el-table-column>
+		<el-table-column label="详情" width="10%">
+      <template slot-scope="scope">
+        <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
+      </template>
+    </el-table-column>
 		</el-table>
 		<el-pagination  @current-change="handlePageChange" :current-page="currentPage"  layout="total, prev, pager, next, jumper" :total="totalResource">
     	</el-pagination>
