--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -34,6 +34,11 @@
                   </div>
                 </template> -->
               </el-table-column>
+              <el-table-column label="详情" width="100">
+                <template slot-scope="scope">
+                  <el-button @click="jumpDetailResource(scope.row)" type="text" size="small">查看</el-button>
+                </template>
+              </el-table-column>
             </el-table>
           </template>
         </div>
@@ -69,6 +74,11 @@
                 </template>
               </el-table-column>
               <el-table-column prop="count" label="查看次数" width='130'>
+              </el-table-column>
+               <el-table-column label="详情" width="100">
+                <template slot-scope="scope">
+                  <el-button @click="jumpDetailResource(scope.row)" type="text" size="small">查看</el-button>
+                </template>
               </el-table-column>
             </el-table>
           </template>
@@ -106,6 +116,11 @@
               </el-table-column>
               <el-table-column prop="update_time" label="更新时间" width='180'>
               </el-table-column>
+               <el-table-column label="详情" width="100">
+                <template slot-scope="scope">
+                  <el-button @click="jumpDetailLatestCatalog(scope.row)" type="text" size="small">查看</el-button>
+                </template>
+              </el-table-column>
             </el-table>
           </template>
         </div>
@@ -141,6 +156,11 @@
                 </template>
               </el-table-column>
               <el-table-column prop="count" label="点击量" width='130'>
+              </el-table-column>
+              <el-table-column label="详情" width="100">
+                <template slot-scope="scope">
+                  <el-button @click="jumpDetailLatestCatalog(scope.row)" type="text" size="small">查看</el-button>
+                </template>
               </el-table-column>
             </el-table>
           </template>
