接口说明样式

--- a/sources/catalog/details/view.html
+++ b/sources/catalog/details/view.html
@@ -80,29 +80,42 @@
 			</el-tab-pane>
 			<el-tab-pane label="接口说明" name="interfaceinfo">
 				<p v-show="tableInterfaces.length == 0">暂无接口说明</p>
-				 <div v-show="tableInterfaces.length > 0"><el-table
-				    :data="tableInterfaces"
-				    style="width: 100%">
-				    <el-table-column type="expand">
-				      <template scope="props">
-				        <el-form label-position="left"  class="demo-table-expand">
-				          <el-form-item label="使用说明">
-				            <span>{{ props.row.operation_desc }}</span>
-				          </el-form-item>
-				          <el-form-item label="字段说明">
-				            <span>{{ props.row.request_info }}</span>
-				          </el-form-item>
-				        </el-form>
-				      </template>
-				    </el-table-column>
-				    <el-table-column
-				      label="接口列表"
-				      prop="service_url">
-				      <template scope="props">
-				      	{{ props.row.service_url }}
-				      </template>
-				    </el-table-column>
-				  </el-table></div>
+				 <div v-show="tableInterfaces.length > 0">
+  <el-table :data="tableInterfaces" style="width: 100%">
+            <el-table-column type="expand">
+              <template scope="props">
+                <el-form label-position="left" class="demo-table-expand">
+                  <el-form-item label="接口方式">
+                    <span>HTTP</span>
+                  </el-form-item>
+                  <el-form-item label="请求类型">
+                    <span>POST</span>
+                  </el-form-item>
+                  <el-form-item label="请求Header设置">
+                    <span>Content-Type：application/json;charset=utf-8</span>
+                  </el-form-item>
+                   <el-form-item label="请求Body格式（参数传递JSON）">
+                    <span>请求参数实例：</span>
+                  </el-form-item>
+                   <el-form-item label="返回数据格式（返回JSON格式）">
+                    <span>结果返回实例：</span>
+                  </el-form-item>
+                  <el-form-item label="使用说明">
+                    <span>{{ props.row.operation_desc }}</span>
+                  </el-form-item>
+                  <el-form-item label="字段说明">
+                    <span>{{ props.row.request_info }}</span>
+                  </el-form-item>
+                </el-form>
+              </template>
+            </el-table-column>
+            <el-table-column label="接口列表" prop="service_url">
+              <template scope="props">
+                {{ props.row.service_url }}
+              </template>
+            </el-table-column>
+          </el-table>
+					</div>
 			</el-tab-pane>
 			</el-tabs>
 		</div>
