--- a/sources/catalog/business-details/view.html
+++ b/sources/catalog/business-details/view.html
@@ -3,7 +3,7 @@
 		<div class="head-desc">{{head_title}} - 详情
 			<a href="javascript:;" class="back-link" @click='goback()'><i class="fa fa-angle-left font-bold"></i> 返回</a>
 		</div>
-		<table  border="0" width="100%"><tbody>
+		<table class="table-detail" border="0" width="100%"><tbody>
 			<tr class="">
 				<td width="20%">业务事项</td>
 				<td>{{detail_pro.activity_name}}</td>
