--- a/sources/catalog/depCardingCatalog/view.html
+++ b/sources/catalog/depCardingCatalog/view.html
@@ -2,7 +2,7 @@
   <div class="catalog-content">
     <div class="filter-carding">
       <div class="head-desc">部门政务信息梳理目录</div>
-      <table class="filter-table">
+      <table class="filter-table table-detail">
         <tbody>
           <tr class="border">
             <td class="title">首字母：</td>
