--- a/sources/catalog/depCardingCatalog/demand-resources/view.html
+++ b/sources/catalog/depCardingCatalog/demand-resources/view.html
@@ -13,15 +13,13 @@
       </el-input>
     </div>
   </div>
-  <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row
-    @current-change="handleCurrentChange">
-    <el-table-column prop="require_name" label="需求名称" width="15%"></el-table-column>
-    <el-table-column prop="dataset_name" label="需求信息资源名称" width="20%"></el-table-column>
-    <el-table-column prop="request_dept_name" label="需求部门" width="15%"></el-table-column>
-    <el-table-column prop="source_dept_name" label="来源部门" width="15%"></el-table-column>
-    <el-table-column prop="is_get" label="是否已获取" width="14%"></el-table-column>
-    <el-table-column prop="expect_update_frequence" label="数据使用频率" width="18%"></el-table-column>
-    <el-table-column label="详情" width="10%">
+  <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row>
+    <el-table-column prop="require_name" label="需求信息资源名称"></el-table-column>
+    <el-table-column prop="request_dept_name" label="需求部门" ></el-table-column>
+    <el-table-column prop="source_dept_name" label="来源部门" ></el-table-column>
+    <el-table-column prop="is_get" label="是否已获取" ></el-table-column>
+    <el-table-column prop="expect_update_frequence" label="数据使用频率" ></el-table-column>
+    <el-table-column label="详情" width="80">
       <template slot-scope="scope">
         <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
       </template>
