--- a/sources/catalog/depCardingCatalog/department-resources/view.html
+++ b/sources/catalog/depCardingCatalog/department-resources/view.html
@@ -16,19 +16,19 @@
 		<div :style="showStyle"  ref="business">
 			<el-table :data="tableData"	border	style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty"
 			highlight-current-row   @current-change="handleCurrentChange">
-			<el-table-column prop="activity_name" label="业务事项" width="40%"></el-table-column>
-			<el-table-column prop="service_target" label="服务对象"	width="20%"></el-table-column>
-			<el-table-column prop="dept_name" label="所属部门" width="20%">
+			<el-table-column prop="activity_name" label="业务事项" ></el-table-column>
+			<el-table-column prop="service_target" label="服务对象"></el-table-column>
+			<el-table-column prop="dept_name" label="所属部门" >
 			<!-- <template scope="scope">
 			{{ dept_name }}
 			</template> -->
 			</el-table-column>
-			<el-table-column label="更新时间" width="20%">
+			<el-table-column label="更新时间" >
 			<template scope="scope">
 			{{ scope.row.update_time | formatDate }}
 			</template>
 			</el-table-column>
-		<el-table-column label="详情" width="10%">
+		<el-table-column label="详情" width="80">
       <template slot-scope="scope">
         <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
       </template>
