--- a/sources/catalog/depCardingCatalog/economy-resources/view.html
+++ b/sources/catalog/depCardingCatalog/economy-resources/view.html
@@ -15,10 +15,10 @@
 		</div>
 		<el-table :data="tableData"	border	style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty"
 		highlight-current-row   @current-change="handleCurrentChange">
-		<el-table-column prop="system_name" label="系统名称" width="30%"></el-table-column>
-		<el-table-column prop="system_desc" label="系统描述"	width="30%"></el-table-column>
-		<el-table-column prop="dept_name" label="来源部门" width="30%"></el-table-column>
-		<el-table-column label="详情" width="10%">
+		<el-table-column prop="system_name" label="系统名称" ></el-table-column>
+		<el-table-column prop="system_desc" label="系统描述"	></el-table-column>
+		<el-table-column prop="dept_name" label="来源部门" ></el-table-column>
+		<el-table-column label="详情" width="80">
       <template slot-scope="scope">
         <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
       </template>
