--- a/sources/catalog/department/view.html
+++ b/sources/catalog/department/view.html
@@ -6,16 +6,16 @@
 		<el-table-column
 		type="index"
 		label="序号"
-		width="20%">
+		width="80">
 		</el-table-column>
 		<el-table-column
 		prop="sourceName"
 		label="目录类型"
-		width="40%">
+	>
 		</el-table-column>
 		<el-table-column
 		prop="sourceCount"
-		label="信息资源/业务（项）" width="40%">
+		label="信息资源/业务（项）">
 		</el-table-column>
 		</el-table>
 	</div>
