--- a/sources/catalog/statistic/view.html
+++ b/sources/catalog/statistic/view.html
@@ -1,22 +1,14 @@
 <main id="statistic">
-	<div class="catalog-content">
-		<div class="head-desc">{{head_title}}</div>
-		<el-table :data="tableData"	border	style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" 
-		highlight-current-row   @current-change="handleCurrentChange">
-		<el-table-column
-		type="index"
-		label="序号"
-		width="20%">
-		</el-table-column>
-		<el-table-column
-		prop="name"
-		label="目录类型"
-		width="40%">
-		</el-table-column>
-		<el-table-column
-		prop="resourceCount"
-		label="信息资源（个）" width="40%">
-		</el-table-column>
-		</el-table>
-	</div>
+  <div class="catalog-content">
+    <div class="head-desc">{{head_title}}</div>
+    <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row
+      @current-change="handleCurrentChange">
+      <el-table-column type="index" label="序号" width="80">
+      </el-table-column>
+      <el-table-column prop="name" label="目录类型" min-width="180">
+      </el-table-column>
+      <el-table-column prop="resourceCount" label="信息资源（个）">
+      </el-table-column>
+    </el-table>
+  </div>
 </main>
