--- a/sources/catalog/system-details/view.html
+++ b/sources/catalog/system-details/view.html
@@ -3,7 +3,7 @@
 		<div class="head-desc">{{head_title}}-详情
 			<a href="javascript:;" class="back-link" @click='goback()'><i class="fa fa-angle-left font-bold"></i> 返回</a>
 		</div>
-		<table  border="0" width="100%"><tbody>
+		<table class="table-detail" border="0" width="100%"><tbody>
 			<tr class="">
 				<td width="20%">表英文名</td>
 				<td>{{detail_pro.enName}}</td>
@@ -26,8 +26,8 @@
 		  <el-table :data="tableDataItem"	border	style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty"
       highlight-current-row  >
       <el-table-column prop="name" label="
-      字段英文名" width="50"></el-table-column>
-      <el-table-column prop="column_desc" label="中文描述"	width="50%"></el-table-column>
+      字段英文名" ></el-table-column>
+      <el-table-column prop="column_desc" label="中文描述"></el-table-column>
       </el-table>
       <el-pagination  @current-change="handlePageChange" :current-page="currentPage"  layout="total, prev, pager, next, jumper" :total="totalResource">
         </el-pagination>
