--- a/sources/catalog/system-dynamic-resources/view.html
+++ b/sources/catalog/system-dynamic-resources/view.html
@@ -12,29 +12,28 @@
         </el-input>
       </div>
     </div>
-    <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row
-      @current-change="handleCurrentChange">
-      <el-table-column prop="enName" label="表英文名" width="40%">
+    <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row>
+      <el-table-column prop="enName" label="表英文名" >
         <template scope="scope">
           <span v-bind:title="scope.row.enName">{{ scope.row.enName }}</span>
         </template>
       </el-table-column>
-      <el-table-column prop="cnName" label="表中文名" width="20%">
+      <el-table-column prop="cnName" label="表中文名" >
         <template scope="scope">
           <span v-bind:title="scope.row.cnName">{{ scope.row.cnName }}</span>
         </template>
       </el-table-column>
-      <el-table-column prop="table_type" label="类型" width="20%">
+      <el-table-column prop="table_type" label="类型" >
         <template scope="scope">
           <span v-bind:title="scope.row.table_type">{{ scope.row.table_type }}</span>
         </template>
       </el-table-column>
-      <el-table-column prop="table_source_type" label="来源" width="20%">
+      <el-table-column prop="table_source_type" label="来源" >
         <template scope="scope">
           <span v-bind:title="scope.row.table_source_type">{{ scope.row.table_source_type }}</span>
         </template>
       </el-table-column>
-       <el-table-column label="详情" width="10%">
+       <el-table-column label="详情" width="80">
           <template slot-scope="scope">
             <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
           </template>
