--- a/sources/catalog/system/view.html
+++ b/sources/catalog/system/view.html
@@ -3,15 +3,15 @@
     <div class="head-desc">{{head_title}}</div>
     <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row
       @current-change="handleCurrentChange">
-      <el-table-column type="index" label="序号" width="20%">
+      <el-table-column type="index" label="序号" width="80">
       </el-table-column>
-      <el-table-column prop="systemCount" label="政务系统（个）" width="20%">
+      <el-table-column prop="systemCount" label="政务系统（个）">
         </el-table-column>
-        <el-table-column prop="dbCount" label="数据库（个）" width="20%">
+        <el-table-column prop="dbCount" label="数据库（个）">
         </el-table-column>
-        <el-table-column prop="tableCount" label="表或视图（张）" width="20%">
+        <el-table-column prop="tableCount" label="表或视图（张）">
         </el-table-column>
-        <el-table-column prop="columnCount" label="字段（项）" width="20%">
+        <el-table-column prop="columnCount" label="字段（项）" >
         </el-table-column>
     </el-table>
   </div>
