--- a/sources/catalog/depCardingCatalog/department-resources/view.html
+++ b/sources/catalog/depCardingCatalog/department-resources/view.html
@@ -34,7 +34,7 @@
       </template>
     </el-table-column>
 			</el-table>
-			<el-pagination  @current-change="handlePageChange" :current-page="currentPage"  layout="total, prev, pager, next, jumper" :total="totalResource">
+			<el-pagination  @current-change="handlePageChange" :current-page="currentPage"  page-size=20 layout="total, prev, pager, next, jumper" :total="totalResource">
 	    	</el-pagination>
     </div>
   <!-- </div> -->
