--- a/sources/catalog/resources/view.html
+++ b/sources/catalog/resources/view.html
@@ -88,7 +88,7 @@
 				</el-row>
 			</div>
 		</div>
-		<el-pagination  @current-change="handlePageChange" :current-page="currentPage"  layout="total, prev, pager, next, jumper" :total="totalResource">
+		<el-pagination  @current-change="handlePageChange" :current-page="currentPage"  page-size=20 layout="total, prev, pager, next, jumper" :total="totalResource">
     	</el-pagination>
 	</div>
 </main>
