--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -42,7 +42,7 @@
           </template>
         </div>
         <div class="block page">
-          <el-pagination @current-change="latestResourcesChange" layout="total, prev, pager, next, jumper" :total=pageTotal>
+          <el-pagination @current-change="latestResourcesChange" page-size=20 layout="total, prev, pager, next, jumper" :total=pageTotal>
           </el-pagination>
         </div>
       </el-tab-pane>
@@ -82,7 +82,7 @@
           </template>
         </div>
         <div class="block page">
-          <el-pagination @current-change="hottestResourcChange" layout="total, prev, pager, next, jumper" :total=pageTotal>
+          <el-pagination @current-change="hottestResourcChange" page-size=20 layout="total, prev, pager, next, jumper" :total=pageTotal>
           </el-pagination>
         </div>
       </el-tab-pane>
@@ -122,7 +122,7 @@
           </template>
         </div>
         <div class="block page">
-          <el-pagination @current-change="latestDirectoryChange" layout="total, prev, pager, next, jumper" :total="pageTotal">
+          <el-pagination @current-change="latestDirectoryChange" page-size=20 layout="total, prev, pager, next, jumper" :total="pageTotal">
           </el-pagination>
         </div>
       </el-tab-pane>
@@ -162,7 +162,7 @@
           </template>
         </div>
         <div class="block page">
-          <el-pagination @current-change="hottestCatalogChange" layout="total, prev, pager, next, jumper" :total=pageTotal>
+          <el-pagination @current-change="hottestCatalogChange" page-size=20 layout="total, prev, pager, next, jumper" :total=pageTotal>
           </el-pagination>
         </div>
       </el-tab-pane>
@@ -183,7 +183,7 @@
           <li v-show="dataEmpty">无满足该条件的数据</li>
         </ul>
         <div class="block page">
-          <el-pagination @current-change="hotPolicyChange" layout="total, prev, pager, next, jumper" :total=pageTotal>
+          <el-pagination @current-change="hotPolicyChange" page-size=10 layout="total, prev, pager, next, jumper" :total=pageTotal>
           </el-pagination>
         </div>
       </el-tab-pane>
