--- a/sources/catalog/view.html
+++ b/sources/catalog/view.html
@@ -7,4 +7,11 @@
     </aside>
       <router-view class="router-catalog" :key="key"></router-view>  
   </div>
+  <section class="float-profile">
+    <a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_2/page.html?singlePage=true" class="share-link" target="_blank"><img src="../assets/ico/share.png" /><p>共享</p></a>
+    <ul class="other-link">
+      <li><a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_3/page.html?singlePage=true" class="share-link" target="_blank"><img src="../assets/ico/open.png" /></a><p>开放</p></li>
+      <li><a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_4/page.html?singlePage=true" class="share-link" target="_blank"><img src="../assets/ico/theme.png" /></a><p>主题</p></li>
+    </ul>
+  </section> 
 </main>
