--- a/sources/catalog/system-details/view.html
+++ b/sources/catalog/system-details/view.html
@@ -29,7 +29,7 @@
       字段英文名" ></el-table-column>
       <el-table-column prop="column_desc" label="中文描述"></el-table-column>
       </el-table>
-      <el-pagination  @current-change="handlePageChange" :current-page="currentPage"  page-size=5 layout="total, prev, pager, next, jumper" :total="totalResource">
+      <el-pagination  @current-change="handlePageChange" :current-page="currentPage"  :page-size="5" layout="total, prev, pager, next, jumper" :total="totalResource">
         </el-pagination>
 		</div>
 	</div>
