--- a/sources/catalog/demand-details/view.html
+++ b/sources/catalog/demand-details/view.html
@@ -1,9 +1,9 @@
 <main id="details">
-	<div class="catalog-content">
-		<div class="head-desc">{{head_title}}-详情
-			<a href="javascript:;" class="back-link" @click='goback()'><i class="fa fa-angle-left font-bold"></i> 返回</a>
-		</div>
-		<table class="table-detail"  border="0" width="100%"><tbody>
+  <div class="catalog-content">
+    <div class="head-desc">{{head_title}}-详情
+      <a href="javascript:;" class="back-link" @click='goback()'><i class="fa fa-angle-left font-bold"></i> 返回</a>
+    </div>
+    <!-- <table class="table-detail"  border="0" width="100%"><tbody>
 			<tr class="">
 				<td>需求信息资源名称</td>
 				<td>{{detail_pro.dataset_name}}</td>
@@ -36,6 +36,14 @@
 				<td>备注</td>
 				<td>{{detail_pro.dataset_desc}}</td>
 			</tr>
-		</tbody></table>
-	</div>
+		</tbody></table> -->
+    <el-table :data="detail_pro" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row>
+      <el-table-column prop="dataset_name" label="需求信息资源名称"></el-table-column>
+      <el-table-column prop="request_dept_name" label="需求部门"></el-table-column>
+      <el-table-column prop="source_dept_name" label="来源部门"></el-table-column>
+      <el-table-column prop="require_name" label="需求资源"></el-table-column>
+      <el-table-column prop="expect_update_frequence" label="数据使用频率"></el-table-column>
+      <el-table-column prop="is_get" label="是否已获取"></el-table-column>
+    </el-table>
+  </div>
 </main>
