首页最新政策时间格式化，系统目录

--- a/sources/dashboard/view.html
+++ b/sources/dashboard/view.html
@@ -69,7 +69,7 @@
                           <router-link :to="'interaction/policyDetail/'+item.id">
                             <span v-bind:title="item.title">{{item.title}}</span>
                           </router-link>
-                          <span>{{item.create_time}}</span>
+                          <span>{{item.create_time | formatDate}}</span>
                         </li>
                       </ul>
                     </el-tab-pane>
@@ -80,7 +80,7 @@
                           <router-link :to="'interaction/policyDetail/'+item.id">
                             <span v-bind:title="item.title">{{item.title}}</span>
                           </router-link>
-                          <span>{{item.create_time}}</span>
+                          <span>{{item.create_time | formatDate}}</span>
                         </li>
                       </ul>
                     </el-tab-pane>
@@ -91,7 +91,7 @@
                           <router-link :to="'interaction/policyDetail/'+item.id">
                             <span v-bind:title="item.title">{{item.title}}</span>
                           </router-link>
-                          <span>{{item.create_time}}</span>
+                          <span>{{item.create_time | formatDate}}</span>
                         </li>
                       </ul>
                     </el-tab-pane>
