--- a/sources/catalog/economy-extend-resourses/view.html
+++ b/sources/catalog/economy-extend-resourses/view.html
@@ -1,31 +1,38 @@
 <main id="resources">
-	<div class="catalog-content">
-		<div class="head-desc">
-			<div class="title">{{head_title}}</div>
-			<div class="other-info"> {{itemCount}} 个资源&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;共 {{totalResource}}个处室</div>
-		</div>
-		<div class="search-box">
-			<div class="total-num">共 <span class="count">{{totalResource}}</span> 条结果</div>
-			<div class="search-input">
-				<el-input placeholder="请输入" v-model="keyword">
-				<el-button slot="append" icon="search" @click="handleSearch">搜索</el-button>
-				</el-input>
-			</div>
-		</div>
-		<el-table :data="tableData"	border	style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty"
-		highlight-current-row   @current-change="handleCurrentChange">
-		<el-table-column prop="dataset_name" label="信息资源名称" width="40%"></el-table-column>
-		<el-table-column prop="share_type" label="共享类型"	width="20%"></el-table-column>
-		<el-table-column prop="is_open" label="开放类型"	width="20%"></el-table-column>
-		<el-table-column prop="dept_name" label="来源部门" width="20%">
-		</el-table-column>
-		<el-table-column label="更新时间" width="20%">
-		<template scope="scope">
-		{{ scope.row.update_time }}
-		</template>
-		</el-table-column>
-		</el-table>
-		<el-pagination  @current-change="handlePageChange" :current-page="currentPage"  :page-size="20" layout="total, prev, pager, next, jumper" :total="totalResource">
-    	</el-pagination>
-	</div>
+  <div class="catalog-content">
+    <div class="head-desc">
+      <div class="title">{{head_title}}</div>
+      <div class="other-info"> {{itemCount}} 个资源&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;共 {{totalResource}}个处室</div>
+    </div>
+    <div class="search-box">
+      <div class="total-num">共 <span class="count">{{totalResource}}</span> 条结果</div>
+      <div class="search-input">
+        <el-input placeholder="请输入" v-model="keyword">
+          <el-button slot="append" icon="search" @click="handleSearch">搜索</el-button>
+        </el-input>
+      </div>
+    </div>
+    <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row>
+      <el-table-column prop="dataset_name" label="信息资源名称"></el-table-column>
+      <el-table-column prop="share_type" label="共享类型"></el-table-column>
+      <el-table-column prop="is_open" label="开放类型"></el-table-column>
+      <el-table-column prop="dept_name" label="来源部门">
+      </el-table-column>
+      <el-table-column label="更新时间">
+        <template scope="scope">
+          {{ scope.row.update_time }}
+        </template>
+      </el-table-column>
+      <el-table-column prop="dept_name" label="来源部门">
+      </el-table-column>
+      <el-table-column label="详情" width="80">
+        <template slot-scope="scope">
+          <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
+        </template>
+      </el-table-column>
+    </el-table>
+    <el-pagination @current-change="handlePageChange" :current-page="currentPage" :page-size="20" layout="total, prev, pager, next, jumper"
+      :total="totalResource">
+    </el-pagination>
+  </div>
 </main>
