--- a/sources/catalog/depCardingCatalog/demand-resources/view.html
+++ b/sources/catalog/depCardingCatalog/demand-resources/view.html
@@ -20,11 +20,11 @@
     <el-table-column prop="create_time" label="创建时间" ></el-table-column>
     <!-- <el-table-column prop="is_get" label="是否已获取" ></el-table-column>
     <el-table-column prop="expect_update_frequence" label="数据使用频率" ></el-table-column> -->
-    <!-- <el-table-column label="详情" width="80">
+     <el-table-column label="详情" width="80">
       <template slot-scope="scope">
         <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
       </template>
-    </el-table-column> -->
+    </el-table-column> 
   </el-table>
   <el-pagination @current-change="handlePageChange" :current-page="currentPage" :page-size="20" layout="total, prev, pager, next, jumper" :total="totalResource">
   </el-pagination>
