--- a/sources/dashboard/view.html
+++ b/sources/dashboard/view.html
@@ -255,15 +255,17 @@
           Visualization map
         </h2>
         <img class="ico" src="../assets/dashboard/ico1.png" />
-        <a href="http://10.190.239.12:8080/data-view-web-scatter/index.html" target="_blank" class="map-more">更多></a>
+        <a v-bind:href="sysObj.datamapmore"  target="_blank" class="map-more">更多></a>
       </div>
       <div class="content">
-        <a class="m-l-0" href="http://10.190.239.12:8080/data-view-web-scatter/index.html" target="_blank">
+        <a class="m-l-0" v-bind:href="sysObj.datamap1" target="_blank">
         <img src="../assets/dashboard/map1.png" /></a>
-        <a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_2/page.html" target="_blank"><img src="../assets/dashboard/map2.png" /></a>
-        <a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_3/page.html" target="_blank"> <img src="../assets/dashboard/map3.png" /></a>
-        <a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_4/page.html" target="_blank"><img src="../assets/dashboard/map4.png" /></a>
-        <a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_5/page.html" target="_blank" class="m-r-0"> <img src="../assets/dashboard/map5.png" /></a>
+        <a class="m-l-0" v-bind:href="sysObj.datamap2" target="_blank">
+        <img src="../assets/dashboard/map2.png" /></a>
+          <a class="m-l-0" v-bind:href="sysObj.datamap3" target="_blank">
+             <img src="../assets/dashboard/map3.png" /></a>
+         <a class="m-l-0" v-bind:href="sysObj.datamap4" target="_blank"><img src="../assets/dashboard/map4.png" /></a>
+        <a v-bind:href="sysObj.datamap5"  target="_blank" class="m-r-0"> <img src="../assets/dashboard/map5.png" /></a>
       </div>
       <section>
         <div class="main-title">
