--- a/sources/admin/container/applyList/view.html
+++ b/sources/admin/container/applyList/view.html
@@ -10,7 +10,7 @@
     </div>
     <div class="filter">
       <div class="search">
-        <el-input placeholder="请输入" icon="search" v-model="search_inp" :on-icon-click="searchClick">
+        <el-input placeholder="请输入信息资源名称" icon="search" v-model="search_inp" :on-icon-click="searchClick">
         </el-input>
       </div>
       <div class="select">
@@ -103,7 +103,7 @@
       <el-tab-pane label="数据项列表" name="itemlist">
         <div class="filter">
           <div class="search">
-            <el-input placeholder="请输入" icon="search" v-model="search_inp2" :on-icon-click="searchClick2">
+            <el-input placeholder="请输入数据项" icon="search" v-model="search_inp2" :on-icon-click="searchClick2">
             </el-input>
           </div>
         </div>
