--- a/sources/catalog/depCardingCatalog/demand-resources/view.html
+++ b/sources/catalog/depCardingCatalog/demand-resources/view.html
@@ -8,7 +8,7 @@
   <div class="search-box">
     <div class="total-num">共 <span class="count">{{totalResource}}</span> 条结果</div>
     <div class="search-input">
-      <el-input placeholder="请输入" v-model="keyword">
+      <el-input placeholder="请输入需求部门/来源部门" v-model="keyword">
         <el-button slot="append" icon="search" @click="handleSearch">搜索</el-button>
       </el-input>
     </div>
