--- a/sources/catalog/department-resources/view.html
+++ b/sources/catalog/department-resources/view.html
@@ -9,7 +9,7 @@
 		<div class="search-box" :style="showStyle" ref="search">
 			<div class="total-num">共 <span class="count">{{totalResource}}</span> 条结果</div>
 			<div class="search-input">
-				<el-input placeholder="请输入" v-model="keyword">
+				<el-input placeholder="请输入业务事项" v-model="keyword">
 				<el-button slot="append" icon="search" @click="handleSearch">搜索</el-button>
 				</el-input>
 			</div>
