--- a/sources/catalog/shared-resources/view.html
+++ b/sources/catalog/shared-resources/view.html
@@ -7,7 +7,7 @@
 		<div class="search-box">
 			<div class="total-num">共 <span class="count">{{totalResource}}</span> 条结果</div>
 			<div class="search-input">
-				<el-input placeholder="请输入" v-model="keyword">
+				<el-input placeholder="请输入信息资源名称" v-model="keyword">
 				<el-button slot="append" icon="search" @click="handleSearch">搜索</el-button>
 				</el-input>
 			</div>
