--- a/sources/dashboard/view.html
+++ b/sources/dashboard/view.html
@@ -311,7 +311,7 @@
           </dl>
         </div>
         <div class="ico-right">
-          <img class="in-block" src="../assets/dashboard/ico2.png" width="118" height="109" />
+          <img class="in-block" src="../assets/dashboard/ico2.png" />
         </div>
       </section>
     </div>
